# tauri-update-checker

./: Cargo.toml  updater.json
src/: main.rs
